<resources>
    <string name="app_name">SEDRA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="logintitle">Login</string>
    <string name="signuptitle">SignUp</string>
    <string name="forgetpasstitle">Reset Password</string>
    <string name="activationtitle">Activation</string>
    <string name="emailhint">Email Address</string>
    <string name="passwordhint">Password</string>
    <string name="forgetpass">Forgot Password</string>
    <string name="newaccount">Create New Account</string>
    <string name="username">First Name</string>
    <string name="repassword">Last Name </string>
    <string name="phonenum">Phone Number (e.g : 14155552671)</string>
    <string name="typephonenum">Please type your phone number to reset password</string>
    <string name="newpassword">New Password</string>
    <string name="activationcode">Insert Activation Code</string>
    <string name="code">Code</string>
    <string name="selectcountry">Select Country</string>
    <string name="selectstate">Select State</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="myaccount">My Account</string>
    <string name="shoppingbasket">Shopping Basket</string>
    <string name="descounted">Discounted Products</string>
    <string name="morerequsted">More Requested</string>
    <string name="fav">Favorites</string>
    <string name="aboutus">About Us</string>
    <string name="callus">Contact Us</string>
    <string name="exit">Sign Out</string>
    <string name="enter">Sign In</string>
    <string name="sidemennewaccount">New Account</string>
    <string name="applangtv">Application Language </string>
    <string name="loadimagestv">Load App Images</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selectlang">Select Language</string>
    <string name="selectvendor">Select Vendor</string>
    <string name="selectcategorie">Select Category</string>
    <string name="count">Count</string>
    <string name="sr">SR</string>
    <string name="search">Search for .....</string>
    <string name="priceselect">Select Price .....</string>
    <string name="filtercat">Category</string>
    <string name="filterbyprice">Filter By Price .....</string>
    <string name="delivertime">Deliver in same Day ....</string>
    <string name="msg">Message ......</string>
    <string name="datescreen">Deliver Date</string>
    <string name="sendername">Sender Name</string>
    <string name="senderphone">Sender Phone</string>
    <string name="recivername">Receiver Name</string>
    <string name="giftmsg">Gift Message</string>
    <string name="hay">Neighborhood</string>
    <string name="st">Street</string>
    <string name="homephone">Home Number</string>
    <string name="moreinfo">More Information</string>
    <string name="selectfrommap">Location On Map</string>
    <string name="deliceraddress">Deliver Address</string>
    <string name="rcevername">Receiver Name</string>
    <string name="rceverphone">Receiver Phone</string>
    <string name="gpsoff">Turn on GPS</string>
    <string name="turnon">Turn On</string>
    <string name="locationdet">Location Detected</string>
    <string name="total">Total Price</string>
    <string name="delivercosts">Deliver Cost</string>
    <string name="finaltotalprice">Final Total Price</string>
    <string name="acceptrules">Accept Rules</string>
    <string name="registermailcheck">Subscribe mail service</string>
    <string name="deccode">Discount Code</string>
    <string name="shoppingcart">Shopping Cart</string>
    <string name="cridet">Credit Card</string>
    <string name="pressagain">Press Back Again To Exit App ..</string>
    <string name="conectionerrorr">Connection Error !</string>
    <string name="exitfromapp">Do you Want to Exit from App ?</string>
    <string name="sedra">SEDRA Gifts</string>
    <string name="payment">Payment</string>
    <string name="cardname">Name Of Card</string>
    <string name="exdate">Expiry Date</string>
    <string name="cardnum">Card Number</string>
    <string name="sameday">Deliver in the same Day</string>
    <string name="emptyproducts">Oops No Products !</string>
    <string name="distrects">Select District</string>
    <string name="day">Days</string>
    <string name="notset">Not Set</string>
    <string name="countitem">Please Select Item Count !</string>
    <string name="erorr">Item Not added successfully !</string>
    <string name="pleasew">Please Wait ...</string>
    <string name="loginplease">Please SignIn to add to cart !</string>
    <string name="paynotallaw">You cannot Pay , Cart is Empty !</string>
    <string name="loginvalemail">Email is required!</string>
    <string name="loginvalpassword">"Password is required!"</string>
    <string name="adddonewish">Product has been added to your Favorites</string>
    <string name="removewishlist">Product has been removed from your Favorites</string>
    <string name="fnameerrorr">First Name is required !</string>
    <string name="lnameerrorr">Last Name is required !</string>
    <string name="phoneerror">Phone Number is required !</string>
    <string name="regsuccsess">New User has been registered successfully</string>
    <string name="loginsucsess">You are Logged in successfully ( Welcome )</string>
    <string name="faild">Operation Failed</string>
    <string name="repasswordreg">Re Password</string>
    <string name="passnotmatch">Passwords Not Matches !</string>
    <string name="notvalidemail">Invalid Email Address</string>
    <string name="passwordleanght">Password should be at lest 6 Chars </string>
    <string name="mobileverify">Click to Verify Mobile Number</string>
    <string name="verifcode">Verification Code</string>
    <string name="insertvercode">Insert Verification code</string>
    <string name="codewillsend">An verification code will be sent to you by SMS</string>
    <string name="addreesserorr">Insert your Address</string>
    <string name="orderplace">Your Order has been placed successfully</string>
    <string name="share">Share Product Via</string>
    <string name="phonevalid">Invalid phone number format (e.g : 14155552671)</string>
    <string name="update">Your Info has been Saved Successfully </string>
    <string name="newpass">New Default Password will send in SMS shortly</string>
    <string name="selectcard">Please Select Card Brand</string>
    <string name="sedragifts">Sedra for Gifts</string>
    <string name="sedrainfo">Sedra is an e-shop consists of four sections the first for Flowers, the second for the various gifts, the third for chocolates and cakes, the fourth for seedlings and the ornamental trees</string>
    <string name="mainaddress">Main Address</string>
    <string name="addressdetails"> King Fahd St , Al-Dmam - Al-Khobr</string>
    <string name="phoneinfo">Phone Number</string>
    <string name="phone">+96651234567 / +96655533322</string>
    <string name="cardvdate">Date</string>
    <string name="cardmessage">Message</string>
    <string name="cardaddress">Address</string>
    <string name="presentcard">Present Card</string>
    <string name="addcard">Add Present Card</string>
    <string name="savesuccsess">Saved Successfully</string>
    <string name="selectgiftmessgae">Please select Present Message</string>
    <string name="selectgiftaddress">Please select Present address</string>
    <string name="selectgiftschadule">Please select Present delivery time</string>
    <string name="doneaddcard">Present Card added successfully</string>
    <string name="addsstreet">Please add street name</string>
    <string name="addbuldingnum">Please add building number </string>
    <string name="addrecevernum">Please add receiver number</string>
    <string name="addnote">Please add Note</string>
    <string name="addsendername">Please Add sender Name</string>
    <string name="addsenderphone">Please Add sender phone</string>
    <string name="addrecevername">Please Add receiver name</string>
    <string name="addmessage">Please Add Gifting Message</string>
    <string name="selectdelevierytime">Please Select Delivery Time </string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="notimes">Delivery Times is Empty</string>
    <string name="additem">Added to your current order</string>
    <string name="removeitem">Removed from your current order</string>
    <string name="updateorder">Your Current Order has been Updated</string>
    <string name="checkout_ui_callback_scheme" translatable="false">checkoutui</string>
    <string name="paymentdone">Payment Operation Success</string>
    <string name="paymentcancled">Payment Operation Canceled</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_delivery_address">Map</string>

</resources>
