<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sedra.appsmatic.com.sedra.Activites.SignInScreen"
    android:background="#e2dcd0">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view">
        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">
              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/home_btn_contactus"
                  android:src="@drawable/homeicon"
                  android:padding="5dp"
                  android:layout_gravity="center" />
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/login_tb_title"
                  android:text="@string/callus"
                  android:textColor="#ffffff"
                  android:textSize="12dp"
                  android:gravity="center"
                  android:padding="5dp" />
          </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/countact_name_input"
            android:background="@drawable/inputbar"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:hint="@string/username"
            android:textSize="13dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/countact_email_input"
            android:background="@drawable/inputbar"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:hint="@string/emailhint"
            android:textSize="13dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/countact_phone_input"
            android:background="@drawable/inputbar"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:hint="@string/phonenum"
            android:textSize="13dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/countact_message_input"
            android:background="@drawable/inputbar"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:hint="@string/msg" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countact_send_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sendbtn_ar"
        android:padding="15dp" />

</RelativeLayout>
