<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sedra.appsmatic.com.sedra.Activites.SignInScreen"
    android:background="#e2dcd0">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view"
        android:background="@drawable/aboutus_bg">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/sedragifts"
                    android:id="@+id/info1"
                    android:layout_gravity="center_horizontal|top"
                    android:gravity="center"
                    android:inputType="textImeMultiLine"
                    android:padding="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sedrainfo"
                    android:id="@+id/info2"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="#190030"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/mainaddress"
                    android:layout_gravity="center_horizontal|top"
                    android:gravity="center"
                    android:inputType="textImeMultiLine"
                    android:padding="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:typeface="serif"
                    android:textSize="15dp"
                    android:id="@+id/info3"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/addressdetails"
                    android:id="@+id/info4"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#190030"
                    android:typeface="serif"
                    android:gravity="center"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_gravity="center_horizontal|top"
                    android:gravity="center"
                    android:inputType="textImeMultiLine"
                    android:padding="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:textSize="15dp"
                    android:text="@string/phoneinfo"
                    android:id="@+id/info5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="ltr"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/phone"
                    android:id="@+id/info6"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#190030"
                    android:typeface="serif"
                    android:gravity="center"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
