<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sedra.appsmatic.com.sedra.Activites.SignInScreen"
    android:background="#e2dcd0">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view">
        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/login_tb_title"
                  android:text="@string/logintitle"
                  android:textColor="#ffffff"
                  android:textSize="12dp"
                  android:gravity="center"
                  android:padding="5dp" />
          </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/view">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/email_input"
            android:background="@drawable/inputbar"
            android:hint="@string/emailhint"
            android:padding="10dp"
            android:textSize="13dp"
            android:gravity="start" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:id="@+id/password_input"
            android:layout_marginTop="10dp"
            android:background="@drawable/inputbar"
            android:hint="@string/passwordhint"
            android:textAlignment="viewStart"
            android:padding="10dp"
            android:textSize="13dp"
            android:gravity="start"
            android:password="false"
            android:inputType="textPassword" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:src="@drawable/signin_btn"
            android:layout_gravity="center"
            android:layout_marginTop="25dp" />

    </LinearLayout>

</RelativeLayout>
